<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:clipChildren="false"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.tudarmstadt.seemoo.mbr.audioactivity.send.SendActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_modulation"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="151dp"
        android:layout_alignParentLeft="true" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/modulationSpinner"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_template"
        android:id="@+id/textView3"
        android:layout_below="@+id/modulationSpinner"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/templateSpinner"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_message"
        android:id="@+id/textView2"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/templateSpinner" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:inputType="textNoSuggestions|textMultiLine"
        android:ems="10"
        android:id="@+id/text"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:gravity="top"
        android:hint="@string/hint_enter_message"
        android:background="#ffe0e0e0"
        android:padding="10dp"
        android:layout_above="@+id/statusText"
        android:layout_marginBottom="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/statusText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <de.tudarmstadt.seemoo.mbr.audioactivity.misc.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playButton"
        android:stateListAnimator="@anim/fab_anim"
        android:src="@drawable/ic_play_arrow_white_48dp"
        android:background="@drawable/ripple_primary"
        android:padding="4dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone"
        android:elevation="4dp" />

    <de.tudarmstadt.seemoo.mbr.audioactivity.misc.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stopButton"
        android:stateListAnimator="@anim/fab_anim"
        android:src="@drawable/ic_stop_white_48dp"
        android:background="@drawable/ripple"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone"
        android:padding="4dp"
        android:elevation="4dp" />


</RelativeLayout>
